--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </div>
 
-    <div class="btn">About me</div>
+        <div class="btn"><a herf="about us"About me</a></div>
   </div>
 
   </div>
