--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </div>
 
-        <div class="btn"><a href="about.html">About me</a></div>
+        <div class="btn"><a href="../about.html">About me</a> </div>
   </div>
 
   </div>
