--- a/about.html
+++ b/about.html
@@ -1,10 +1,12 @@
-<html>
-  <head>
-   <title>
-     prabhu about page
-    </title>
-  </head>
- <body>
-   <h1> This page in progress........</h1>
-  </body>
-  </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>prabhu-aboutus </title>
+</head>
+<body>
+    <h1>This page  work in progress.......</h1>
+</body>
+</html>
